Resolve manifest conflict state and finalize iframe-free metadata

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 3,
   "name": "AI Sidebar Launcher",
-  "description": "Быстрый доступ к AI-сервисам: встроенный чат + запуск внешних AI в один клик.",
-  "version": "1.1.0",
-  "permissions": ["sidePanel", "storage", "tabs"],
-  "host_permissions": ["https://openrouter.ai/*"],
+  "description": "Быстрый доступ к AI-сервисам: встроенный чат и запуск внешних AI без iframe-блокировок.",
+  "version": "1.1.1",
+  "permissions": [
+    "sidePanel",
+    "storage",
+    "tabs"
+  ],
+  "host_permissions": [
+    "https://openrouter.ai/*"
+  ],
   "action": {
     "default_title": "Открыть AI Sidebar"
   },
